# codex-manager

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: 20260406-install.md
scripts/: install.ps1  install.sh
src/: main.rs
